fixed alignment issue

--- a/styles.css
+++ b/styles.css
@@ -40,12 +40,13 @@ main {
 }
 #selector-container {
     margin-top: 15px;
-    /* text-align: left; */
+    text-align: left;
     display: flex;
     flex-direction: column;
 }
 #selector-container input {
     text-align: center;
+    margin-top: 5px;
 }
 #generator {
     text-align: center;
